--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 
 /** Header styles **/
 .header {
-  background-image: url(https://lh3.googleusercontent.com/9Vqr0jD1d1xbv6FvgZsltoeVWuivu9pak3u1ezS1VlVn0pNaEmc4ofKWZrRGVz8iXBzuUKkMIOv7Y7WqF6nn0Uk9FT44JanVBGO-5Qr8om6FbOqnmpRDKA1XXIEjA1k010MBZCGh6ZoX4ljt5beY_n3n60oVk_lvo41q2-UtBcL-JIbHmMB6XDyt30ijjZ1b96chWBvNMQZklzM42rzJlPvz8-3BIXaXoJguQnZfYPumTMKuX2fo1sRJ5c3bwSIIN8pzMNgSnKL6CGOJkrQv-HIaYamYel5zoq5gVb9Hf3_4uBRlZsSQ7xAf6_43PF-CtGZkmxcsrQu45De7XNwWfnQfPF3_xe1YbpQjtv9ndsEb9e-snY8mJtCrKs5KtVPuv7wjhgMFrhS1VSv-1CYDcpg_JW5_BVpAG6mB-wgCNByQ4ZHucYQvdjrZN1u4hWZwrXtOq2MqZ0TNtTACWy4_BoLeQ2h3CQs8tts-1Q_e-Zly23o1u7DgmL-MNh-A6LzghYqIycUR4HcoJbUTFELvfoq7u6Cr2i9pxQR8lSd7S39qJByqePaZUDUd_VAisQqqmpfT4WkjuEbo_FpMUcHT8dXmNoylDrX_rJ0MyIc=s637-no);
+  background-image: url(https://photos.google.com/photo/AF1QipORpfMC-DQ-MM6_kB1Sp2mkAh2J2e8Ez8KnGQ6K);
   height: 400px;
   background-position: center;
 }
@@ -20,7 +20,7 @@ body {
 .roasting {
   margin: 40px auto;
   padding: 20px 30px 40px 30px;
-  background-color: #2D6573;
+  background-color: #2D6573
   overflow: auto;
   width: 75%;
   border-radius: 4px;
