--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 
 /** Header styles **/
 .header {
-  background-image: url(https://photos.google.com/photo/AF1QipORpfMC-DQ-MM6_kB1Sp2mkAh2J2e8Ez8KnGQ6K);
+  background-image: url(https://photos.google.com/share/AF1QipP6ghFURUDapnyz1DxbZcToLF6LiL-nNWwKzEBHq9_h8GIiJnaMw8c9u3SIe9SVTQ?key=RXZkTzEtYmdvVDQ3LThoZTF2dXduaGpMTFlUUTJn);
   height: 400px;
   background-position: center;
 }
