--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 
 /** Header styles **/
 .header {
-  background-image: url(https://photos.google.com/share/AF1QipP6ghFURUDapnyz1DxbZcToLF6LiL-nNWwKzEBHq9_h8GIiJnaMw8c9u3SIe9SVTQ?key=RXZkTzEtYmdvVDQ3LThoZTF2dXduaGpMTFlUUTJn);
+  background-image: url(https://photos.app.goo.gl/oNgyPHmFDX1pLKeR2);
   height: 400px;
   background-position: center;
 }
