--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 
 /** Header styles **/
 .header {
-  background-image: url(https://photos.app.goo.gl/oNgyPHmFDX1pLKeR2);
+  background-image: url(https://lh3.googleusercontent.com/FQmOIScggeHFoK73LWlTYcSg3dosSUOeRLS7aiNcan8pN0iW7ZGjbIWMxSkzHQlaIFnlordWzkupcf9DBjaJC2Rrih_Ao3vXojWJtEim_L2WRPx-ZiGWlEHtlmcexuhWn6HhrnLF0Qjn9VaDazPm6d09xZfNDPPw4yu6eWLzpSJTIvXMvaqz9ujcNgnV2fTRGbzmKVLykMXFw5dFm4stGTXGelw5ksQJ0-7_4Uvm12zrUHy7i7WYRMv2EZu3Msy7b3huHiL-ooXdra_b4tYcR0silPfsjUBxjZ-uA5LgR-FfMZyozBhlngMPKESC6nba6pUu-Hscy5tYWgbCpcrA7MK0V-TaGjY6U67lzQ61-kZKztIH0Lhs2Eijh5M_ry2ZlyQJ-JfyrnPJSqbrmYwgj-hInadCs9mwotMpdax27qYjVCLjFi2LUysccWF0UuGzaqJEEtDKomVs7HnRHuOvT683LHtR2KgiBJ_HiPkY4RPwd2RAX-Cnas_pG3RP6vrKl9HnWvAaK2bJWjdWL3useOwAJ9rjPap0Ck-7zikGik6f2p3ZqEnpNUmI24UAo2RRmVY_Kmm2WsIrvq95ma4DI4j_W7rVLVJGQnKAvZg=s637-no);
   height: 400px;
   background-position: center;
 }
