--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 .header {
   background-image: url(https://lh3.googleusercontent.com/drV1BkHIVbC6Cf3B2bWw2q95RYR6x8e2tkxTpx40rSkHrQcVUEwgxeESz-RoDXDkGzVw0CJrLXYSHoSdT8CLsXNHEJN-ILwePDWb4ILGULE4q_ONJi0M3RxrNyriJyZVhI4-IReWTVcOh8N9obGedWNUdhiseRaiO2oIG50mZQ_0r5fJHO-za6HLfimDxuXZsq8rrRR4vE47NRDTJXy2SoNnZfSJS-KYE9am1mRg1TiA976gRGweQQFBTIDY4Ttqcc4gTJLRPYnQE9vM-r2jgabVDqd4HotHNRrMrg4TjHWQTg7jQ0yNBUkQA5NndFThxW3MW5UrNTdiXyXZ9gdSLpuvy7sotbyk-QDnX8NNa22zYFymCDMuUB4AN7HAF8YnOq5lVAJuaXcbimxQSmVqDR_n3LHXD68exa91JJQKWuAouJ-MkYoQcPFkM4ls4s1OEBHmYrsd3tAmmO04ZtHBCJ3jlRG3CAGI0EKF-6w4YgnQDxOx5768MRU8iFcqly4h6o4Z3kwLghYFIlsYYHqUQMzNqp4czvpj1FpTNfqb3td61yc9WpUmnrFQBbzLfD97rI47Nm7LrtNmNf3On9QiNq86emhgBANUoOjQPro=s637-no);
   height: 400px;
-  background-position: center;
+  background-position: center center;
 }
 
 .roasting {
